# instantsonicview

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile
instantsonicview/: CMakeLists.txt
instantsonicview/implementation/: CMakeLists.txt
instantsonicview/implementation/common/: AnalysisJob.cpp  AnalysisJob.h  AudioRecorder.cpp  AudioRecorder.h  AudioStream.cc  AudioStream.h  Bridge.cpp  Bridge.h  CMakeLists.txt  CurveDisplay.cpp  CurveDisplay.h  FeatureMeter.cpp  FeatureMeter.h  LiveScrollingAudioDisplay.cpp  LiveScrollingAudioDisplay.h  Meter.cpp  Meter.h  MetersManager.cpp  MetersManager.h  RecordingThumbnail.cpp  RecordingThumbnail.h
instantsonicview/implementation/plugin/: CMakeLists.txt
instantsonicview/implementation/plugin/vst/: AppConfig.h  CMakeLists.txt  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
instantsonicview/implementation/standalone/: CMakeLists.txt  main.cc
instantsonicview/src/: CMakeLists.txt  common.h  configuration.h
instantsonicview/src/analyzer/: CMakeLists.txt  analyzer.cc  analyzer.h  dcblock.cc  dcblock.h  feature_meta.cc  feature_meta.h  features.h
instantsonicview/tests/: CMakeLists.txt  main.cc
instantsonicview/tests/analyzer/: CMakeLists.txt  tests_analyzer.cc
